Added user functions and reasigning

--- a/view/ThankYou_v.html
+++ b/view/ThankYou_v.html
@@ -6,11 +6,11 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Thank You</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>Thankyou for your report +1 vbucks for you.</div>
+        <div>Thank you for your report.</div>
     </body>
 </html>
